refactor(hrefs): add-new-domain

--- a/website/index.html
+++ b/website/index.html
@@ -11,14 +11,14 @@
 	content="Archie Biddiscombe's Personal Website: I'm a BSc Geography graduate working at Ordnance Survey. I'm training as a full-stack developer with a specialism in geospatial, based in the United Kingdom. I enjoy music, getting outdoors, and discovering new tech through self-taught projects and self-hosting." />
 
 	<!-- sm descriptors-->
-	<meta property="og:url" content="https://www.arch.codes" />
+	<meta property="og:url" content="https://abiddiscombe.dev" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Archie Biddiscombe" />
 	<meta property="og:description"
 		content="Archie Biddiscombe's Personal Website: I'm a BSc Geography graduate working at Ordnance Survey. I'm training as a full-stack developer with a specialism in geospatial, based in the United Kingdom. I enjoy music, getting outdoors, and discovering new tech through self-taught projects and self-hosting." />
 
 	<!-- specify root -->
-	<link rel="canonical" href="https://www.arch.codes" />
+	<link rel="canonical" href="https://abiddiscombe.dev" />
 
 	<!-- icons -->
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
